<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/lightYellow"
            android:gravity="center_horizontal|center_vertical"
            >

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:src="@drawable/register_img"
                android:contentDescription=""
                tools:ignore="ContentDescription"
                />
        </LinearLayout>


        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textSize="20sp"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/college"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_college"
            android:textSize="20sp"
            android:imeActionId="@+id/register"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="3"
            android:textColor="@android:color/black" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_phone"
            android:textSize="20sp"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/email"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewCategorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select Event Category"
            android:textSize="15dp"/>


        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/events_category_array"
            android:spinnerMode="dropdown"
            android:background="@android:color/holo_blue_light"
            />



        <TextView
            android:id="@+id/textViewEventSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select Event "
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            />

        <Spinner
            android:id="@+id/eventSpinner"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="3"
            android:entries="@array/event_array"
            android:spinnerMode="dropdown"
            android:scrollbarSize="20dp"
            android:background="@android:color/holo_blue_light"
            />


        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>

</RelativeLayout>